# task2report

./: .copier-answers.yml  Makefile  README.md  pyproject.toml
grammar/: task2report.g4
src/task2report/: cli.py  task2report.py
src/task2report/grammar/: task2report.interp  task2report.tokens  task2reportLexer.interp  task2reportLexer.py  task2reportListener.py  task2reportParser.py
tests/: test.md
